--- a/Frontend /dashboard.html
+++ b/Frontend /dashboard.html
@@ -10,7 +10,7 @@
 <body class="page page-dashboard">
 <header class="top-bar">
 <div class="top-bar-inner">
-<div class="logo-mark">NYC Mobility Risk</div>
+<div class="logo-mark">Insurtech</div>
 <nav class="top-nav">
 <a href="index.html" class="top-link">Overview</a>
 <span class="top-link active">Dashboard</span>
@@ -149,8 +149,8 @@
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
-<span>NYC Taxi Mobility Exposure · Risk Prototype</span>
-<span>Frontend wired to Flask API layer</span>
+<span>Insurtech</span>
+<span>Group 7</span>
 </div>
 </footer>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
