--- a/Frontend /index.html
+++ b/Frontend /index.html
@@ -10,7 +10,13 @@
 <header class="top-bar">
 <div class="top-bar-inner">
 <div class="logo-mark">Insurtech</div>
+<nav class="top-nav">
+<span class="top-link active">Overview</span>
 <a href="dashboard.html" class="top-link">Dashboard</a>
+<a href="density.html" class="top-link">Density</a>
+<a href="revenue.html" class="top-link">Revenue</a>
+<a href="map.html" class="top-link">Map</a>
+</nav>
 </div>
 </header>
 <main class="landing-main">
@@ -55,4 +61,3 @@
 </footer>
 </body>
 </html>
-
