--- a/Frontend /dashboard.html
+++ b/Frontend /dashboard.html
@@ -14,6 +14,9 @@
 <nav class="top-nav">
 <a href="index.html" class="top-link">Overview</a>
 <span class="top-link active">Dashboard</span>
+<a href="density.html" class="top-link">Density</a>
+<a href="revenue.html" class="top-link">Revenue</a>
+<a href="map.html" class="top-link">Map</a>
 </nav>
 </div>
 </header>
@@ -47,70 +50,6 @@
 </div>
 </div>
 </div>
-<div class="panel chart-panel">
-<div class="panel-header">
-<h2>Hourly Trip Density</h2>
-<span class="panel-tag">Derived from /api/map?hour=H</span>
-</div>
-<div class="panel-body">
-<canvas id="densityChart"></canvas>
-<div class="panel-footnote">Density computed by summing hourly trip_count across all zones.</div>
-</div>
-</div>
-</section>
-<section class="panel-row map-row">
-<div class="panel map-panel">
-<div class="panel-header">
-<h2>Zone Risk Map</h2>
-<div class="panel-controls">
-<label class="slider-label">
-<span>Hour</span>
-<input id="hourSlider" type="range" min="0" max="23" value="17">
-<span id="hourLabel" class="slider-value">17:00</span>
-</label>
-</div>
-</div>
-<div class="map-shell">
-<div id="map" class="map-view"></div>
-<div id="mapFallback" class="map-fallback hidden">GeoJSON map data not yet available. Risk metrics still load and can be explored via the table.</div>
-</div>
-</div>
-<div class="panel detail-panel">
-<div class="panel-header">
-<h2>Zone Detail</h2>
-<span class="panel-tag">/api/zone/&lt;zone_id&gt;?hour=H</span>
-</div>
-<div class="detail-body">
-<div class="detail-header">
-<div class="detail-title" id="detail-zone-name">Select a zone</div>
-<div class="detail-subtitle" id="detail-zone-borough"></div>
-</div>
-<div class="detail-grid">
-<div class="detail-item">
-<div class="detail-label">Trips per Hour</div>
-<div class="detail-value" id="detail-trips-per-hour">–</div>
-</div>
-<div class="detail-item">
-<div class="detail-label">Avg Trip Duration (min)</div>
-<div class="detail-value" id="detail-avg-duration">–</div>
-</div>
-<div class="detail-item">
-<div class="detail-label">Exposure Index</div>
-<div class="detail-value" id="detail-exposure-index">–</div>
-</div>
-<div class="detail-item">
-<div class="detail-label">Revenue Stability</div>
-<div class="detail-value" id="detail-revenue-stability">–</div>
-</div>
-<div class="detail-item">
-<div class="detail-label">Risk Score</div>
-<div class="detail-value accent" id="detail-risk-score">–</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section class="panel-row">
 <div class="panel table-panel">
 <div class="panel-header">
 <h2>Top Risk Zones</h2>
@@ -135,16 +74,6 @@
 </table>
 </div>
 </div>
-<div class="panel chart-panel">
-<div class="panel-header">
-<h2>Revenue Volatility by Zone</h2>
-<span class="panel-tag">/api/revenue</span>
-</div>
-<div class="panel-body">
-<canvas id="revenueChart"></canvas>
-<div class="panel-footnote">Volatility and stability scores are computed from trip-level revenue features.</div>
-</div>
-</div>
 </section>
 </main>
 <footer class="site-footer">
@@ -158,4 +87,3 @@
 <script src="dashboard.js"></script>
 </body>
 </html>
-
