--- a/Frontend /density.html
+++ b/Frontend /density.html
@@ -22,7 +22,7 @@
 </header>
 <main class="dashboard-main">
 <section class="panel-row">
-<div class="panel chart-panel">
+<div class="panel chart-panel density-panel">
 <div class="panel-header">
 <h2>Hourly Trip Density</h2>
 <span class="panel-tag">/api/map?hour=0..23</span>
