--- a/Frontend /index.html
+++ b/Frontend /index.html
@@ -11,11 +11,11 @@
 <div class="top-bar-inner">
 <div class="logo-mark">Insurtech</div>
 <nav class="top-nav">
-<span class="top-link active">Overview</span>
+<span class="top-link active">Home</span>
 <a href="dashboard.html" class="top-link">Dashboard</a>
-<a href="density.html" class="top-link">Density</a>
 <a href="revenue.html" class="top-link">Revenue</a>
 <a href="map.html" class="top-link">Map</a>
+<a href="drivers.html" class="top-link">Demo</a>
 </nav>
 </div>
 </header>
