--- a/Frontend /revenue.html
+++ b/Frontend /revenue.html
@@ -11,9 +11,8 @@
 <div class="top-bar-inner">
 <div class="logo-mark">Insurtech</div>
 <nav class="top-nav">
-<a href="index.html" class="top-link">Overview</a>
+<a href="index.html" class="top-link">Home</a>
 <a href="dashboard.html" class="top-link">Dashboard</a>
-<a href="density.html" class="top-link">Density</a>
 <span class="top-link active">Revenue</span>
 <a href="map.html" class="top-link">Map</a>
 </nav>
