--- a/Frontend /density.html
+++ b/Frontend /density.html
@@ -12,7 +12,7 @@
 <div class="top-bar-inner">
 <div class="logo-mark">Insurtech</div>
 <nav class="top-nav">
-<a href="index.html" class="top-link">Overview</a>
+<a href="index.html" class="top-link">Home</a>
 <a href="dashboard.html" class="top-link">Dashboard</a>
 <span class="top-link active">Density</span>
 <a href="revenue.html" class="top-link">Revenue</a>
