--- a/Frontend /map.html
+++ b/Frontend /map.html
@@ -12,11 +12,11 @@
 <div class="top-bar-inner">
 <div class="logo-mark">Insurtech</div>
 <nav class="top-nav">
-<a href="index.html" class="top-link">Overview</a>
+<a href="index.html" class="top-link">Home</a>
 <a href="dashboard.html" class="top-link">Dashboard</a>
-<a href="density.html" class="top-link">Density</a>
 <a href="revenue.html" class="top-link">Revenue</a>
 <span class="top-link active">Map</span>
+<a href="drivers.html" class="top-link">Demo</a>
 </nav>
 </div>
 </header>
