--- a/Frontend /dashboard.html
+++ b/Frontend /dashboard.html
@@ -14,7 +14,6 @@
 <nav class="top-nav">
 <a href="index.html" class="top-link">Home</a>
 <span class="top-link active">Dashboard</span>
-<a href="map.html" class="top-link">Map</a>
 <a href="drivers.html" class="top-link">Demo</a>
 </nav>
 </div>
@@ -40,7 +39,7 @@
 <div class="kpi-card">
 <div class="kpi-label">Peak Exposure Hour</div>
 <div class="kpi-value" id="kpi-peak-hour">–</div>
-<div class="kpi-caption">Local time, 24h clock</div>
+<div class="kpi-caption">Local time, 24-hour clock</div>
 </div>
 <div class="kpi-card">
 <div class="kpi-label">Revenue Volatility Score</div>
@@ -57,7 +56,7 @@
 </div>
 <div class="panel-body">
 <canvas id="densityChart"></canvas>
-<div class="panel-footnote">Sum of hourly trip_count across all zones.</div>
+<div class="panel-footnote">Sum of hourly trip count across all zones.</div>
 </div>
 </div>
 <div class="panel table-panel">
