--- a/Frontend /index.html
+++ b/Frontend /index.html
@@ -13,7 +13,6 @@
 <nav class="top-nav">
 <span class="top-link active">Home</span>
 <a href="dashboard.html" class="top-link">Dashboard</a>
-<a href="map.html" class="top-link">Map</a>
 <a href="drivers.html" class="top-link">Demo</a>
 </nav>
 </div>
@@ -22,34 +21,16 @@
 <section class="hero">
 <div class="hero-copy">
 <h1 class="hero-title">Insurtech</h1>
-<p class="hero-subtitle">Transform raw NYC taxi trips into exposure-aware underwriting signals powered by zone-level density, congestion windows, and revenue volatility.</p>
+<p class="hero-subtitle">Your driving tells a story. We help you read it.</p>
 <div class="hero-actions">
 <a href="dashboard.html" class="primary-btn">View Risk Dashboard</a>
 </div>
 <div class="hero-meta">
 <span>Real NYC TLC trips</span>
 <span>Explainable risk scoring</span>
-<span>Underwriter-ready storytelling</span>
 </div>
 </div>
-<div class="hero-panel">
-<div class="hero-panel-header">Underwriting Snapshot</div>
-<div class="hero-metrics">
-<div class="hero-metric">
-<div class="hero-metric-label">Daily Trips Processed</div>
-<div class="hero-metric-value">250K+</div>
-</div>
-<div class="hero-metric">
-<div class="hero-metric-label">High-Risk Zones</div>
-<div class="hero-metric-value accent">Dynamic</div>
-</div>
-<div class="hero-metric">
-<div class="hero-metric-label">Peak Exposure Window</div>
-<div class="hero-metric-value">By Hour</div>
-</div>
-</div>
-<p class="hero-panel-footnote">Backend API streams live exposure and revenue stability metrics directly into this dashboard.</p>
-</div>
+
 </section>
 </main>
 <footer class="site-footer">
